--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 [![packageversion](https://img.shields.io/badge/Package%20version-`r packageVersion("disp.plot")`-lightgrey.svg)](commits/master)
 [![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-lightgrey.svg)](/commits/master)
-[![Build Status](https://travis-ci.org/tjconstant/disp.plot.svg?branch=master)](https://travis-ci.org/tjconstant/disp.plot.svg)
+[![Build Status](https://travis-ci.org/tjconstant/disp.plot.svg?branch=master)](https://travis-ci.org/tjconstant/disp.plot)
 [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/disp.plot)](https://cran.r-project.org/package=disp.plot)
 
 
