--- a/README.Rmd
+++ b/README.Rmd
@@ -23,5 +23,5 @@ Installation
 -----------
 
 ```r
-devtools::install_github('tjconstant/mlfilms')
+devtools::install_github('tjconstant/disp.plot')
 ```
